tests/snapshots/run_core__recursive_bind.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/recursive_bind.hvm
---
λa (a 0)
