tests/snapshots/run_core__recursive_combinator.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/recursive_combinator.hvm
---
0
