tests/snapshots/run_core__recursive_combinator_nested.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/recursive_combinator_nested.hvm
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/run_core/recursive_combinator_nested.hvm :
Tagged terms not supported for hvm32.
[0m   3 |   0: ([4m[31m#[0ma {Foo @* a} 9);[0m
