tests/snapshots/run_core__recursive_match_native.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/recursive_match_native.hvm
---
512
