tests/snapshots/run_core__ref_resolution.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/ref_resolution.hvm
---
42
