tests/snapshots/run_core__repeated_name_truncation.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/repeated_name_truncation.hvm
---
λ* long_name_that_truncates2
