tests/snapshots/run_core__scopeless_discard.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/scopeless_discard.hvm
---
{2 *}
