tests/snapshots/run_core__str_inc.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_core/str_inc.hvm
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/run_core/str_inc.hvm :
Tagged terms not supported for hvm32.
[0m  1 | (StrInc (len, buf)) = (len,[4m[31m [0m#str λx (StrGo len #str (buf x)))[0m
